--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "98d1fdf0-6661-4def-a993-e9d46068fec5"
   },
   "newProjectRoot": "projects",
   "projects": {
